@@ -1,3 +1,7 @@
+2015-08-23  Carl Hetherington  <cth@carlh.net>
+
+	* Use correct fonts to render subtitles in preview (#663).
+
 2015-08-22  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.44 released.
